| Summary: | ASTERISK-26916: res_pjsip: Excessive refcount reached on transport ao2 object | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2017-04-03 13:30:44 | Date Closed: | 2017-04-03 17:38:14 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | CentOS 7 | Attachments: | ( 0) Frack_Trace.txt ( 1) frack.log |
| Description: | Every so often I am seeing the following in the Asterisk CLI with a backtrace of sorts (see attached):
{noformat} [2017-04-03 19:00:52] ERROR[23614]: astobj2.c:518 __ao2_ref: Excessive refcount 100000 reached on ao2 object 0x2a40fd8 [2017-04-03 19:00:52] ERROR[23614]: astobj2.c:518 __ao2_ref: FRACK!, Failed assertion Excessive refcount 100000 reached on ao2 object 0x2a40fd8 (0) {noformat} Asterisk doesn't crash just shows this error. I'm running from GIT (Asterisk GIT-13-13.15.0-rc1-43-g01c1e60M) with patch https://gerrit.asterisk.org/#/c/5341/ | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-04-03 13:30:44.908-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2017-04-03 14:07:12.473-0500 Good thing you have several examples of the FRACK backtrace. The last one pointed directly at the transport ao2 object leak. Patch up on gerrit. By: Richard Mudgett (rmudgett) 2017-04-03 14:15:04.889-0500 I'm also glad you have BETTER_BACKTRACES enabled. :) By: Ross Beer (rossbeer) 2017-04-03 14:17:38.821-0500 Thank you Richard, I will test this now. By: Friendly Automation (friendly-automation) 2017-04-03 17:38:15.196-0500 Change 5386 merged by Joshua Colp: res_pjsip: Fix transport ref leak. [https://gerrit.asterisk.org/5386|https://gerrit.asterisk.org/5386] By: Friendly Automation (friendly-automation) 2017-04-03 18:38:23.656-0500 Change 5384 merged by Joshua Colp: res_pjsip: Fix transport ref leak. [https://gerrit.asterisk.org/5384|https://gerrit.asterisk.org/5384] By: Friendly Automation (friendly-automation) 2017-04-03 19:11:57.302-0500 Change 5385 merged by Joshua Colp: res_pjsip: Fix transport ref leak. [https://gerrit.asterisk.org/5385|https://gerrit.asterisk.org/5385] By: Friendly Automation (friendly-automation) 2017-04-03 19:12:06.137-0500 Change 5387 merged by Joshua Colp: res_pjsip: Fix transport ref leak. [https://gerrit.asterisk.org/5387|https://gerrit.asterisk.org/5387] By: Abhay Gupta (agupta) 2017-10-13 05:05:06.709-0500 This error is supposedly closed but i get the same error with 13.17.2 By: Abhay Gupta (agupta) 2017-10-13 05:06:29.581-0500 [Oct 12 14:32:07] ERROR[21298][C-0001ad35] astobj2.c: Excessive refcount 100000 reached on ao2 object 0x557464afd838 [Oct 12 14:32:07] WARNING[7128][C-0001aabd] channel.c: Exceptionally long queue length queuing to Local/agentmanual@sterling-00017532;1 [Oct 12 14:32:07] ERROR[21298][C-0001ad35] astobj2.c: FRACK!, Failed assertion Excessive refcount 100000 reached on ao2 object 0x557464afd838 By: Joshua C. Colp (jcolp) 2017-10-13 05:13:27.590-0500 [~agupta] The particular case in this issue was resolved. Yours is coming from a different place - please file a new issue. | ||